# catanllm

./: .gitignore  README.md  benchmark.py  board_plot.py  debug_game.py  example_usage.py  game_convert.py  generate_all_results.py  hello.py  llm_player.py  llm_wrapper.py  log.txt  log_game.py  main.py  openrouter_wrapper.py  pyproject.toml  rating.py  replay.py  requirements.txt  rules.txt  sample_prompt.txt  stepwise_prompt.txt  vllm_wrapper.py
benchmarks/20250609-160817/: benchmark-results-20250609-160817.json
benchmarks/20250609-163423/: benchmark-results.json
benchmarks/20250609051750/: benchmark-results-20250609-051750.json
benchmarks/20250610-050742/: benchmark-results.json
benchmarks/20250610-052120/: benchmark-results.json
game_engine/: engine.py
models/: catan_rules.txt  player.py
players/: debug_player.py  llm_player.py
prompts/: basic_nothink_prompt.txt  basic_prompt.txt  rules.txt  rules_prompt.txt  search_nothink_prompt.txt  search_prompt.txt  stepwise_prompt.txt  strategy.txt  strategy_prompt.txt
prompts/mini/: basic_prompt.txt  rules_prompt.txt  sample_prompt.txt  search_prompt.txt  stepwise_prompt.txt  strategy_prompt.txt
replays/gemini-no_think-basic/: gemini2.5-flash-5-20.json
replays/gemini-no_think-rules/: gemini2.5-flash-5-20.json
replays/gemini-no_think-search/: gemini2.5-flash-5-20.json
replays/gemini-no_think-strategy/: gemini2.5-flash-5-20.json
replays/gemini-thinking-basic/: gemini2.5-flash-5-20.json
util/: game_convert.py  llm_wrapper.py
visualization/: board_plot.py
