[project]
name = "catanllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catanatron @ file:///home/justin/catanllm/catanatron",

    "unsloth>=2025.5.9",
    "requests>=2.31.0",
    "python-dotenv>=1.1.0",
    "openai>=1.84.0",
]
