[project]
name = "catanllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "unsloth>=2025.5.9",
    "requests>=2.31.0",
    "python-dotenv>=1.1.0",
    "openai>=1.84.0",
    "vllm>=0.9.0.1",
    "streamlit>=1.45.1",
    "pillow>=11.2.1",
]
