[project]
name = "catanllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.1.0",
    "openai>=1.84.0",
    "streamlit>=1.45.1",
    "pillow>=11.2.1",
    "catanatron",
    "matplotlib>=3.10.3",
]

[tool.uv.sources]
catanatron = { git = "https://github.com/bcollazo/catanatron.git" }
